crates/vite_task_bin/tests/e2e_snapshots/fixtures/task-select/snapshots/interactive select with recursive.snap
---
source: crates/vite_task_bin/tests/e2e_snapshots/main.rs
expression: e2e_outputs
---
> vp run -r
@ expect-milestone: task-select::0
Search task (↑/↓ to move, enter to select): 
> build: echo build app
  lint: echo lint app
  test: echo test app
  lib#build: echo build lib
  lib#lint: echo lint lib
  lib#test: echo test lib
  lib#typecheck: echo typecheck lib
  task-select-test#check: echo check root
  (…4 more)
@ write-key: enter
~/packages/lib$ echo build lib ⊘ cache disabled: built-in command
build lib

~/packages/app$ echo build app ⊘ cache disabled: built-in command
build app


━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━
    Vite+ Task Runner • Execution Summary
━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

Statistics:   2 tasks • 0 cache hits • 0 cache misses • 2 cache disabled 
Performance:  0% cache hit rate

Task Details:
────────────────────────────────────────────────
  [1] lib#build: ~/packages/lib$ echo build lib ✓
      → Cache disabled for built-in command
  ·······················································
  [2] app#build: ~/packages/app$ echo build app ✓
      → Cache disabled for built-in command
━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━
