crates/vite_task_bin/tests/e2e_snapshots/fixtures/task-select/snapshots/interactive select with typo and transitive.snap
---
source: crates/vite_task_bin/tests/e2e_snapshots/main.rs
expression: e2e_outputs
info:
  cwd: packages/app
---
> vp run -t buid
@ expect-milestone: task-select:buid:0
Task "buid" not found.
Search task (↑/↓ to move, enter to select): buid
> build: echo build app
  lib#build: echo build lib
@ write-key: enter
~/packages/lib$ echo build lib ⊘ cache disabled
build lib

~/packages/app$ echo build app ⊘ cache disabled
build app

---
[vp run] 0/2 cache hit (0%). (Run `vp run --last-details` for full details)
