crates/vite_task_bin/tests/e2e_snapshots/fixtures/task-select/snapshots/interactive select with typo.snap
---
source: crates/vite_task_bin/tests/e2e_snapshots/main.rs
expression: e2e_outputs
info:
  cwd: packages/app
---
> vp run buid
@ expect-milestone: task-select:buid:0
Task "buid" not found.
Search task (↑/↓ to move, enter to select): buid
> build: echo build app
  lib#build: echo build lib
@ write-key: enter
~/packages/app$ echo build app ⊘ cache disabled
build app
