crates/vite_task_bin/tests/e2e_snapshots/fixtures/task-select/snapshots/non-interactive did you mean with recursive.snap
---
source: crates/vite_task_bin/tests/e2e_snapshots/main.rs
expression: e2e_outputs
---
[1]> echo '' | vp run -r buid
Task "buid" not found. Did you mean:
  app#build: echo build app
  lib#build: echo build lib
