crates/vite_task_bin/tests/e2e_snapshots/fixtures/task-select/snapshots/non-interactive no suggestions.snap
---
source: crates/vite_task_bin/tests/e2e_snapshots/main.rs
expression: e2e_outputs
---
[1]> echo '' | vp run zzzzz
Task "zzzzz" not found.
