crates/vite_task_bin/tests/e2e_snapshots/fixtures/task-select/snapshots/non-interactive recursive typo errors.snap
---
source: crates/vite_task_bin/tests/e2e_snapshots/main.rs
expression: e2e_outputs
---
[1]> vtt pipe-stdin -- vt run -r buid
Task "buid" not found.
Next steps:
  Run `vt run` to browse available tasks.
  Check `vite-task.json` and `package.json` scripts where tasks are defined.
