crates/vite_task_bin/tests/e2e_snapshots/fixtures/task-select/snapshots/typo in task script fails without list.snap
---
source: crates/vite_task_bin/tests/e2e_snapshots/main.rs
expression: e2e_outputs
---
[1]> vt run run-typo-task
Task "nonexistent-xyz" not found.
task-select-test#run-typo-task depends on "nonexistent-xyz" via `vt run nonexistent-xyz`.
Next steps:
  Run `vt run` to browse available tasks.
  Check `vite-task.json` and `package.json` scripts where tasks are defined.
